--- a/asimp/CMakeLists.txt
+++ b/asimp/CMakeLists.txt
@@ -1,4 +1,9 @@
+cmake_minimum_required(VERSION 3.20.0)
 project(tuto_assimp)
 
+# adds the bin/ dir (which is convenient)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
-find_package(assimp)
+
+add_subdirectory(dependencies INTERFACES/dependencies)
+add_subdirectory(myCode INTERFACES/myCode)
